aws-sdk-compile-checks-usage/tests/fails/multiple_clients_with_issues.stderr
error: method `create_global_table` (from dynamodb) is missing required argument(s): `replication_group`
 --> tests/fails/multiple_clients_with_issues.rs:9:10
  |
9 |         .create_global_table()
  |          ^^^^^^^^^^^^^^^^^^^

error: method `receive_message` (from sqs) is missing required argument(s): `queue_url`
 --> tests/fails/multiple_clients_with_issues.rs:5:24
  |
5 |     let _ = sqs_client.receive_message()
  |                        ^^^^^^^^^^^^^^^
